# alsa2fifo

./: AlsaAudioInput.cpp  AlsaAudioInput.h  AudioStreamManager.cpp  AudioStreamManager.h  CMakeLists.txt  InputKey.cpp  InputKey.h  Led.cpp  Led.h  README.md  ServiceTracker.cpp  ServiceTracker.h  alsa2fifo.cpp  blockingcircularbuffer.h  params.h  types.h
publishZeroConf/: publishAvahi.cpp  publishAvahi.h  publishmDNS.h
